changed back to a more recent java version