@@ -1407,10 +1407,6 @@ public class SignConfig {
                     swayRepository.getReferenceById(1L)
             );
 
-            signRepository.saveAll(
-                    List.of(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12)
-            );
-
             //Derse
             Sign d1 = new Sign(
                     "Scorun",
@@ -1498,7 +1494,11 @@ public class SignConfig {
             );
 
             signRepository.saveAll(
-                    List.of(d1, d2, d3, d4, d5, d6, d7, d8, d9, d10, d11, d12)
+                    Arrays.asList(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12)
+            );
+
+            signRepository.saveAll(
+                    Arrays.asList(d1, d2, d3, d4, d5, d6, d7, d8, d9, d10, d11, d12)
             );
         };
     }
@@ -1592,10 +1592,6 @@ public class SignConfig {
                     swayRepository.getReferenceById(1L)
             );
 
-            signRepository.saveAll(
-                    List.of(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12)
-            );
-
             //Derse
             Sign d1 = new Sign(
                     "Sagiun",
@@ -1683,7 +1679,11 @@ public class SignConfig {
             );
 
             signRepository.saveAll(
-                    List.of(d1, d2, d3, d4, d5, d6, d7, d8, d9, d10, d11, d12)
+                    Arrays.asList(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12)
+            );
+
+            signRepository.saveAll(
+                    Arrays.asList(d1, d2, d3, d4, d5, d6, d7, d8, d9, d10, d11, d12)
             );
         };
     }
@@ -1777,10 +1777,6 @@ public class SignConfig {
                     swayRepository.getReferenceById(1L)
             );
 
-            signRepository.saveAll(
-                    List.of(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12)
-            );
-
             //Derse
             Sign d1 = new Sign(
                     "Capriun",
@@ -1868,7 +1864,11 @@ public class SignConfig {
             );
 
             signRepository.saveAll(
-                    List.of(d1, d2, d3, d4, d5, d6, d7, d8, d9, d10, d11, d12)
+                    Arrays.asList(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12)
+            );
+
+            signRepository.saveAll(
+                    Arrays.asList(d1, d2, d3, d4, d5, d6, d7, d8, d9, d10, d11, d12)
             );
         };
     }
